Fix logo alignment

--- a/css/style.css
+++ b/css/style.css
@@ -521,7 +521,7 @@ License URI:http://www.gnu.org/licenses/gpl-2.0.html
 		float: left;
 		position: relative;
 		padding-top:8px;
-		top: 25%;
+		top: 50%;
 		-webkit-transform: translateY(-50%);
 		-moz-transform: translateY(-50%);
 		transform: translateY(-50%);
